#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.
Tag: V00-05-43 Christopher O'Grady
2016-12-09 Add new default common-mode parameter for cspad/cspad2x2 that
allows enabling/disabling of unbonded-correction in the case where the
standard correction fails

Tag: V00-05-42
2016-07-19 NDArrIOV1 - do not throw std::runtime_error if dimensions in data do not coinside with expected.

Tag: V00-05-41
2016-07-15 Remove warning message when user doesn't set all 4 common-mode pars

Tag: V00-05-40
2016-06-24 Mikhail S. Dubrovin
- Epix100aBaseV1 - set Epix100 default common mode parameters to 4,6,30,10

Tag: V00-05-39
2016-04-27 Mikhail S. Dubrovin
- CsPadPedestalsV1,    CsPadPixelGainV1,    CsPadPixelStatusV1,
  CsPad2x2PedestalsV1, CsPad2x2PixelGainV1, CsPad2x2PixelStatusV1 - load constants with commented lines

Tag: V00-05-38
2016-02-25 Mikhail S. Dubrovin
- in Andor3dBaseV1.h set Rows=Cols=0 for case fo variable size array.

Tag: V00-05-37
2016-02-08 Mikhail S. Dubrovin
- add Andor3dBaseV1.h (PSAS-139)

Tag: V00-05-36
2015-08-10 Mikhail S. Dubrovin
- NDArrIOV1 - fix migration to RHEL7 problem reported by David in PSAS-171.

Tag: V00-05-35
2015-07-07 Mikhail S. Dubrovin
- NDArrIOV1.h - fix doxygen documentation.

Tag: V00-05-34
2015-06-05 Mikhail S. Dubrovin
- NDArrIOV1::get_ndarray - return empty ndarray in stead of zero-pointer, a lot of cosmetic changes.

Tag: V00-05-33
2015-05-22 Mikhail S. Dubrovin
- NDArrIOV1 - use enumerated m_status in stead of string, updated method str_status() (for PSAS-139).

Tag: V00-05-32
2015-05-21 Mikhail S. Dubrovin
- NDArrIOV1 - improve messages (PSAS-148)

Tag: V00-05-31
2015-05-18 Mikhail S. Dubrovin